--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="header-content">
             <header>
               <nav>
-                <p>CONTENIDO</p>
+                <p>CONTENIDO DEL CURSO</p>
                 <details open>
                   <summary>
                     Setup
