--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
           <p>Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.</p>
           <blockquote>
             <p>
-              “Este es el inicio de tu carrera como Desarrollador Web”
+              “Las ideas tienen que ir tomando forma. Se van haciendo realidad al trabajar en ellas. Solo hay que ponerse en marcha.”
             </p>
             <p>
               <span>
-                Juan Montilla
+                Mark Zuckerberg
               </span>
             </p>
           </blockquote>
