Cambio de las redes sociales y el @ con el nombre

--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer__container-p">
-        <p>© Juan Montilla 2021</p>
+        <p>© Vanessa Rubio 2023</p>
       </div>
       <div class="footer__container-social">
-        <a href="https://www.instagram.com/juancms98/" target="_blank"><img src="./img/instagram.svg" alt="instagram"></a>
-        <a href="https://www.facebook.com/juancms98/" target="_blank"><img src="./img/facebook.svg" alt="facebook"></a>
-        <a href="https://twitter.com/juancms98" target="_blank"><img src="./img/twitter.svg" alt="twitter"></a>
+        <a href="https://www.instagram.com/v_rc20/" target="_blank"><img src="./img/instagram.svg" alt="instagram"></a>
+        <a href="https://www.facebook.com/VCxr0l/" target="_blank"><img src="./img/facebook.svg" alt="facebook"></a>
+        <a href="https://twitter.com/Cxr0l_" target="_blank"><img src="./img/twitter.svg" alt="twitter"></a>
       </div>
     </div>
   </footer>
