Cambio de la imagen de la portada y se corrigio el nombre del correo

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           </div>
         </div>
         <p class="mail">Si tienes alguna pregunta escríbeme a
-         <a href="mailto:vanerubio2020@gmail.com" class="mail-ancla">montillasanchezjuancarlos@gmail.com</a>
+         <a href="mailto:vanerubio2020@gmail.com" class="mail-ancla">vanerubio2020@gmail.com</a>
         </p>
       </div>
     </div>
