--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <h1>Curso esencial de HTML y CSS</h1>
           <p>       Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
           <hr />
+          <img src="animation.gif.gif" alt="Gif de html" title="Gif de html"
           <h2>Setup</h2>
           <img src="img/google-chrome.png" alt="Logo de google chrome" title="Logo de google chrome">
           <h3 id="google-chrome">Google Chrome</h3>
