--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
       <div class="main-content">
         <section class="section-content">
           <h1>Curso esencial de HTML y CSS</h1>
-          <p>       Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
+          <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
           <hr />
-          <img src="animation.gif.gif" alt="Gif de html" title="Gif de html"
           <h2>Setup</h2>
           <img src="img/google-chrome.png" alt="Logo de google chrome" title="Logo de google chrome">
           <h3 id="google-chrome">Google Chrome</h3>
@@ -175,7 +174,7 @@
           <p>Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el navegador, algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos funcionan en solo alguna etiquetas como src</p>
           <h3 id="aboutCSS">CSS</h3>
           <p>Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir la presentación de documentos HTML</p>
-          <img src="./img/image_css.png" alt="Cascading Style Sheets" title="Cascading Style Sheets">
+          <img src="./img/image_css2.png" alt="Cascading Style Sheets" title="Cascading Style Sheets">
         </section>
         <section class="section-content">
           <h2>Modelo de caja</h2>
