--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <section class="section-content">
           <h1>Curso esencial de HTML y CSS</h1>
           <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
+          <img src="img/Html y Css.webp" alt="Presentacion de Html y Css" title="Presentacion de Html y Css"
           <hr />
           <h2>Setup</h2>
           <img src="img/google-chrome.png" alt="Logo de google chrome" title="Logo de google chrome">
