pruba de agregar un gif

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
         </div>
         <p class="mail">Si tienes alguna pregunta escríbeme a
          <a href="mailto:vanerubio2020@gmail.com" class="mail-ancla">vanerubio2020@gmail.com</a>
+         <img src="https://i.pinimg.com/originals/41/7e/be/417ebee986aec41629278b1e04cfbfe9.gif" alt="gif" title="gif">
         </p>
       </div>
     </div>
