--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-
-</head>
+<style>
+  body {
+    background-color: aquamarine;
+  }
+</style>
+</head> 
 <body>
   <div class="hero"></div>
   <div class="header">
@@ -221,7 +225,7 @@
         </div>
         <p class="mail">Si tienes alguna pregunta escríbeme a
          <a href="mailto:vanerubio2020@gmail.com" class="mail-ancla">vanerubio2020@gmail.com</a>
-         <img src="https://i.pinimg.com/originals/41/7e/be/417ebee986aec41629278b1e04cfbfe9.gif" alt="gif" title="gif">
+
         </p>
       </div>
     </div>
